[project]
name = "diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "keras>=3.14.1",
    "tensorflow<=2.16.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "tensorflow>=2.16.2 ; sys_platform == 'linux'",
    "diffusers[torch]<0.32.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "diffusers[torch]; sys_platform == 'linux'",
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch; sys_platform == 'linux'",
    "transformers<5.0.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "transformers; sys_platform == 'linux'",
    "datasets>=4.8.5",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
]
